--- a/philo/Makefile
+++ b/philo/Makefile
@@ -5,22 +5,20 @@ RESET_TEXT = \033[0m
 
 NAME = philo
 BONUS = philo_bonus
-CFLAGS = -Wall -Werror -Wextra
+CFLAGS = -Wall -Werror -Wextra -pthread
 CC = gcc
-MANDATORY_DIR = philo
-BONUS_DIR = philo_bonus
 
-M_SOURCES = $(wildcard $(MANDATORY_DIR)/*.c)
-B_SOURCES = $(wildcard $(BONUS_DIR)/*.c)
+M_SOURCES = philo.c parser1.c threads1.c
+# B_SOURCES = $(wildcard $(BONUS_DIR)/*.c)
 
 M_OBJECTS = $(M_SOURCES:.c=.o)
-B_OBJECTS = $(B_SOURCES:.c=.o)
+# B_OBJECTS = $(B_SOURCES:.c=.o)
 
-%.o : %.c $(MANDATORY_DIR)/philo.h
+%.o : %.c philo.h
 	@$(CC) $(CFLAGS) -c $< -o $@
 
-%_bonus.o : %.c $(BONUS_DIR)/philo_bonus.h
-	@$(CC) $(CFLAGS) -c $< -o $@
+# %_bonus.o : %.c $(BONUS_DIR)/philo_bonus.h
+# 	@$(CC) $(CFLAGS) -c $< -o $@
 
 all : $(NAME)
 
@@ -28,18 +26,18 @@ $(NAME) : $(M_OBJECTS)
 	@$(CC) $(CFLAGS) $(M_OBJECTS) -o $(NAME)
 	@echo "$(GREEN_TEXT)[the executable created successfully]$(RESET_TEXT)"
 
-bonus : $(BONUS)
+# bonus : $(BONUS)
 
-$(BONUS) : $(B_OBJECTS)
-	@$(CC) $(CFLAGS) $(B_OBJECTS) -o $(BONUS)
-	@echo "$(GREEN_TEXT)[the bonus executable created successfully]$(RESET_TEXT)"
+# $(BONUS) : $(B_OBJECTS)
+# 	@$(CC) $(CFLAGS) $(B_OBJECTS) -o $(BONUS)
+# 	@echo "$(GREEN_TEXT)[the bonus executable created successfully]$(RESET_TEXT)"
 
 clean :
-	@rm -rf $(M_OBJECTS) $(B_OBJECTS)
+	@rm -rf $(M_OBJECTS)
 	@echo "$(RED_TEXT)object files removed successfully$(RESET_TEXT)"
 
 fclean : clean
-	@rm -rf $(NAME) $(BONUS)
+	@rm -rf $(NAME)
 	@echo "$(RED_TEXT)the executable files removed successfully$(RESET_TEXT)"
 
 re : fclean all
