--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
 	"files.associations": {
 		"iosfwd": "C",
-		"pthread.h": "c",
-		"__locale": "c",
-		"unistd.h": "c"
+		"_size_t.h": "c"
 	}
 }
