--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "time.h": "c",
-    "pthread.h": "c"
+    "pthread.h": "c",
+    "complex": "c"
   }
 }
