--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,8 +57,6 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "time.h": "c",
-    "pthread.h": "c",
-    "complex": "c"
+    "stdio.h": "c"
   }
 }
