--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@ RESET_TEXT = \033[0m
 NAME = philo
 BONUS = philo_bonusB
 R=-fsanitize=thread
-CFLAGS = -Wall -Werror -Wextra
+# CFLAGS = -Wall -Werror -Wextra
 
 M_SOURCES = philos.c philo.c parser1.c threads1.c threads2.c threads3.c ft_free.c
 
