--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,6 +120,7 @@
     "type_traits": "cpp",
     "typeinfo": "cpp",
     "unordered_map": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "limits.h": "c"
   }
 }
