--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -5,8 +5,8 @@ RESET_TEXT = \033[0m
 
 NAME = philo_bonus
 CFLAGS = -Wall -Werror -Wextra
-
-M_SOURCES = philos_bonus.c philo_bonus.c parser1_bonus.c threads1_bonus.c threads2_bonus.c threads3_bonus.c ft_free_bonus.c
+CC=cc
+M_SOURCES = philos_bonus.c philo_bonus.c parser1_bonus.c pro1_bonus.c pro2_bonus.c pro3_bonus.c ft_free_bonus.c
 
 M_OBJECTS = $(M_SOURCES:.c=.o)
 
@@ -15,7 +15,7 @@ M_OBJECTS = $(M_SOURCES:.c=.o)
 
 all : $(NAME)
 $(NAME) : $(M_OBJECTS)
-	@$(CC) $(CFLAGS) $(M_OBJECTS) -o $(NAME)
+	$(CC) $(CFLAGS) $(M_OBJECTS) -o $(NAME)
 	@echo "$(GREEN_TEXT)[the executable created successfully]$(RESET_TEXT)"
 
 clean :
